# HexaAgent

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
hexa_agent/: __init__.py  cli.py  loop.py  memory.py  policy.py  runtime_contract.py
hexa_agent/agents/: __init__.py  base.py  coordinator.py  philosophy.py  transform.py  ui_agent.py
hexa_agent/q4/: __init__.py  gray_code.py  state.py
tests/: test_agents.py  test_policy.py  test_q4.py  test_runtime_contract.py
