[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexa-agent"
version = "1.0.0"
description = "HexaAgent — AI-UI-AI Loop für die GenesisAeon Architektur (Phase 6)"
authors = [{name = "Johann Römer"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
genesis-agents = "hexa_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hexa_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
